[Fixed Radio alignment issue]

--- a/app/design/frontend/Magento/luma/Magento_Checkout/web/css/source/module/checkout/_shipping.less
+++ b/app/design/frontend/Magento/luma/Magento_Checkout/web/css/source/module/checkout/_shipping.less
@@ -184,6 +184,10 @@
                     padding-right: 0;
                     width: 20px;
                 }
+
+                input[type="radio"] {
+                    margin: 4px 5px 0 0;
+                }
             }
 
             tr {
